style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    font-family: "Young Serif";
    height: 100vh;
    background-color: hsl(23, 100%, 92%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
main {
    min-width: 200px;
    height: 93vh;
    padding: 30px;
    background-color: white;
    width: 21%;
    border-style: clear;
    border-radius: 20px;
}
img {
    width: 100%;
    border-radius: 10px;
}
img, h1, h2, h3, p, section, ol, ul, hr {
    margin-bottom: 20px;
}
p, li, h2, table {
    font-family: "Outfit";
}
P {
    color: hsl(30, 10%, 34%);
    font-size: .7rem;
}
hr {
    color: hsl(0, 0%, 87%);
    border-style: solid;
}
h1 {
    color: hsl(24, 5%, 18%);
    font-size: 1.5rem;
}
h2 {
    color: hsl(332, 51%, 32%);
    font-size: 1.0rem;
}
.preparation {
    margin-bottom: 0;
}
.ingredients {
    padding-left: 5px;
}
h3 {
    color: hsl(14, 45%, 36%);
}
li {
    color: hsl(30, 10%, 34%);
    font-size: .7rem;
    margin-bottom: 5px;
}
section {
    height: fit-content;
    background-color: hsl(330, 100%, 98%);
    padding: 20px;
    border-radius: 10px;
    border-style: clear;
}
ul, ol {
    list-style-position: inside;
}
li::marker {
    color: hsl(14, 45%, 36%);
}
p.nutrition {
    border-style: clear;
    margin-bottom: 10px;
}
table {
    width: 100%;
    font-size: .8rem;
    border-collapse: collapse;
    border-style: clear;
}
th.border-bottom, td.border-bottom {
    border-bottom: 1px solid;
    padding-top: 10px;
    padding-bottom: 10px;
}
th.top-cell, td.top-cell {
    padding-top: 0;
}
th.bottom-cell, td.bottom-cell {
    padding-top: 10px;
}
th {
    width: 205px;
    color: hsl(30, 10%, 34%);
    text-align: left;
    font-weight: normal;
    padding-left: 20px;
    border-style: clear;
}
td {
    font-weight: bold;
    color: hsl(14, 45%, 36%);
}
.attribution {
    position: fixed;
    bottom: 0;
}

@media (max-width: 2200px) {
    h1 {
        font-size: 1.3rem;
    }
    h2 {
        font-size: .98rem;
    }
    h3 {
        font-size: 1.0rem;
    }
    p {
        font-size: .64rem;
    }
    li {
        font-size: .68rem;
    }
    table {
        font-size: .76rem;
    }
}
@media (max-width: 2220px) {
    main {
        height: fit-content;
    }
}
@media (max-width: 2000px) {
    h1 {
        font-size: 1.25rem;
    }
    h2 {
        font-size: .96rem;
    }
    h3 {
        font-size: .98rem;
    }
    p {
        font-size: .62rem;
    }
    li {
        font-size: .69rem;
    }
    li {
        font-size: .66rem;
    }
    table {
        font-size: .74rem;
    }
}
@media (max-width: 1800px) {
    h1 {
        font-size: 1.20rem;
    }
    h2 {
        font-size: .9rem;
    }
    h3 {
        font-size: .96rem;
    }
    p {
        font-size: .60rem;
    }
    li {
        font-size: .64rem;
    }
    table {
        font-size: .72rem;
    }
}
@media (max-width: 1600px) {
    h1 {
        font-size: 1.15rem;
    }
    h2 {
        font-size: .85rem;
    }
    h3 {
        font-size: .94rem;
    }
    p {
        font-size: .58rem;
    }
    li {
        font-size: .62rem;
    }
    table {
        font-size: .70rem;
    }
}
@media (max-width: 1400px) {
    h1 {
        font-size: 1.1rem;
    }
    h2 {
        font-size: .8rem;
    }
    h3 {
        font-size: .92rem;
    }
    p {
        font-size: .56rem;
    }
    li {
        font-size: .60rem;
    }
    table {
        font-size: .68rem;
    }
}
@media (max-width: 1200px) {
    main {
        height: fit-content;
    }
    h1 {
        font-size: 1.05rem;
    }
    h2 {
        font-size: .75rem;
    }
    h3 {
        font-size: .90rem;
    }
    p {
        font-size: .54rem;
    }
    li {
        font-size: .58rem;
    }
    table {
        font-size: .66rem;
    }
}
@media (max-width: 1090px) {
    table {
        font-size: .64rem;
    }
}
@media (max-width: 1000px) {
    h1 {
        font-size: 1.0rem;
    }
    h2 {
        font-size: .7rem;
    }
    h3 {
        font-size: .88rem;
    }
    p {
        font-size: .52rem;
    }
    li {
        font-size: .56rem;
    }
    table {
        font-size: .64rem;
    }
}
@media (max-width: 800px) {
    main {
        height: fit-content;
    }
    h1 {
        font-size: .9rem;
    }
    h2 {
        font-size: .65;
    }
    h3 {
        font-size: .86rem;
    }
    p {
        font-size: .50rem;
    }
    li {
        font-size: .54rem;
    }
    table {
        font-size: .62rem;
    }
}
@media (max-width: 600px) {
    main {
        height: fit-content;
    }
    h1 {
        font-size: .8rem;
    }
    h2 {
        font-size: .6rem;
    }
    h3 {
        font-size: .8rem;
    }
    p {
        font-size: .48rem;
    }
    li {
        font-size: .53rem;
    }
    table {
        font-size: .6rem;
    }
}

